fix bugs with jumpToStep

--- a/src/scss/components/_pomodoro.scss
+++ b/src/scss/components/_pomodoro.scss
@@ -32,6 +32,11 @@ $shadow: 0px 0.5px 2px transparentize($textColor, 0.85);
   &[data-is-active='true'] {
     font-weight: 500;
   }
+
+  &:disabled {
+    cursor: not-allowed;
+    color: inherit;
+  }
 }
 
 .pomodoro__step {
